fixed z-index issue with hero div

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -55,7 +55,8 @@ body {color: #fff;text-align: center;font-family: "ProximaNovaT-Thin",sans-serif
 
 /* Padding for spacing */
 .inner {padding: 20px;}
-.githublink {position: absolute; top: 20px; right: 20px; border: 0; width: 32px; height: 32px; fill: rgba(255,255,255,1);}
+a > .githublink {z-index: 9999;}
+.githublink {z-index: 9999; position: absolute; top: 20px; right: 20px; border: 0; width: 32px; height: 32px; fill: rgba(255,255,255,1);}
 .githublink:hover {fill: rgba(255,255,255,0.5);}
 .passcardlink {position: absolute; top: 18px; left: 8px; border: 0; width: 100px; height: auto; fill: rgba(255,255,255,1);}
 .githublink-sidebar {position: absolute; top: 27px; right: 20px; border: 0; width: 40px; height: 40px; fill: rgba(80,80,80,1);}
